Updated background image and divs

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -24,8 +25,14 @@
         
         <section class="wrapper">
             <div id="content">
-                <p>I am a <span>Responsive Designer & Developer</span> who thrives on visual storytelling and the best user experience. When I'm not working, pursuing side projects or getting lost in the rabbit hole of blogs and books, I can be found traveling, hiking and searching for new stories.</p>
+            <p>Peace World!<br>
+                <span>I'm a Responsive Visual Designer & Developer</span><br>
+                who thrives on visual storytelling and the best user experiences. 
+                Outside of my digital landscape you can find me out in nature & reconnecting.</p>
             </div>
+            <div id="content">
+                <p> Let's connect on the digital universe!</p>
+                </div>
         </section>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
